feat: create-update user - create role - assign role (#14)
* feat: create-update user - create role - assign role

* fix: code smells
