# src/main/java/org/tkit/onecx/iam/rs/internal/controllers/AdminRestController.java
@@ -17,6 +17,7 @@ import org.tkit.onecx.iam.domain.service.keycloak.KeycloakUtil;
 import org.tkit.onecx.iam.rs.internal.mappers.AdminMapper;
 import org.tkit.onecx.iam.rs.internal.mappers.ExceptionMapper;
 import org.tkit.quarkus.context.ApplicationContext;
+import org.tkit.quarkus.log.cdi.LogExclude;
 import org.tkit.quarkus.log.cdi.LogService;
 import org.tkit.quarkus.rs.context.token.TokenException;
 
@@ -38,6 +39,24 @@ public class AdminRestController implements AdminInternalApi {
 
     @Inject
     KcConfig kcConfig;
+
+    @Override
+    public Response assignUserRole(String userId, RoleAssignmentRequestDTO roleAssignmentRequestDTO) {
+        adminService.assignRole(userId, roleAssignmentRequestDTO);
+        return Response.status(Response.Status.NO_CONTENT).build();
+    }
+
+    @Override
+    public Response createRole(CreateRoleRequestDTO createRoleRequestDTO) {
+        adminService.createRole(createRoleRequestDTO);
+        return Response.status(Response.Status.CREATED).build();
+    }
+
+    @Override
+    @LogExclude(mask = "***")
+    public Response createUser(CreateUserRequestDTO createUserRequestDTO) {
+        return adminService.createUser(createUserRequestDTO);
+    }
 
     @Override
     public Response getAllProviders() {
@@ -84,6 +103,12 @@ public class AdminRestController implements AdminInternalApi {
         providerAndDomain.setDomain(KeycloakUtil.getDomainFromIssuer(userSearchCriteriaDTO.getIssuer()));
         providerAndDomain.setProvider(adminService.getProviderFromIssuer(userSearchCriteriaDTO.getIssuer()));
         return Response.ok(mapper.map(usersPage, providerAndDomain)).build();
+    }
+
+    @Override
+    public Response updateUser(String userId, UpdateUserRequestDTO updateUserRequestDTO) {
+        adminService.updateUser(userId, updateUserRequestDTO);
+        return Response.status(Response.Status.NO_CONTENT).build();
     }
 
     @ServerExceptionMapper
